small fix for arrow and overflow.

--- a/components/SideBar/SideBar.css
+++ b/components/SideBar/SideBar.css
@@ -18,6 +18,7 @@
 }
 
 .secondary{
+    z-index: -1;
     left: 90px;
     background: #efefef;
     color: #636363;
